fix toast z-index issue

--- a/src/irb-app/irb-result/mp-toast/index.styl
+++ b/src/irb-app/irb-result/mp-toast/index.styl
@@ -18,7 +18,7 @@ font-helvetica-neue = 'Helvetica Neue', Helvetica, Arial, sans-serif
   position fixed
   user-select none
   width toast-width
-  z-index 2
+  z-index 3
 
   button
     background-color transparent
